# mspace-svn

./: Main.cs  Vim.cmbx
Chicken/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.in
Chicken/Chicken-0.1.3/: AUTHORS
Chicken/Chicken-0.1.3/debian/: README.Debian  changelog  control
Chicken/Chicken-0.1.3/doc/: Makefile.am
Chicken/Trunk/: ChangeLog  configure.in
Chicken/Trunk/debian/: control  libchicken.files  libchicken.shlibs.in  rules
Chicken/branches/Chicken-0.1.3/: ChangeLog
Chicken/branches/Chicken-0.1.3/debian/: fulldeps.control  rules
Chicken/branches/Chicken-0.1.3/doc/: chicken-framework.source
Chicken/branches/Chicken-0.1.3/examples/: FactoryExample.cs
Chicken/branches/Chicken-0.1.3/images/: Makefile.am
Chicken/branches/Chicken-0.1.3/src/: AssemblyInfo.cs
Chicken/branches/chicken-0.1.3/debian/: libchicken.files
Chicken/branches/chicken-0.1.3/examples/: NotificationAreaMessageExample.cs
Chicken/branches/chicken-0.1.4/debian/: fulldeps.control
Chicken/branches/chicken-0.1.4/examples/: HtmlBubble.cs  SvgBubble.cs
Chicken/doc/: Makefile.am
Chicken/doc/en/: Chicken.Gnome.TrayIcon.xml
Chicken/doc/en/Chicken.Configuration/: FileStore.xml
Chicken/doc/en/Chicken.Gnome.Notification/: NotificationContent.xml  NotificationFactory.xml  NotificationMessage.xml  NotificationType.xml  TimerEndedHandler.xml
Chicken/doc/en/Chicken.Gnome.TrayIcon/: BlinkingTrayIcon.xml  NotificationTrayIcon.xml  ShrinkingTrayIcon.xml
Chicken/examples/: BubbleExample.cs  FactoryExample.cs  HtmlBubble.cs  Makefile.am  MessageExample.cs  NotificationAreaMessageExample.cs  SvgBubble.cs
Chicken/releases/chicken-0.1.4/: README
Chicken/releases/chicken-0.1.4/debian/: fulldeps.control
Chicken/releases/chicken-0.1.4/doc/: Makefile.am
Chicken/src/: Makefile.am  chicken.pc.in  sources.list
Chicken/src/Gnome/Notification/: NotificationAreaMessage.cs  NotificationBubble.cs  NotificationFactory.cs  NotificationMessage.cs
Chicken/src/Gnome/TrayIcon/: BlinkingTrayIcon.cs  ShrinkingTrayIcon.cs
Chicken/trunk/: ChangeLog  Makefile.am  NEWS  configure.in
Chicken/trunk/debian/: README.Debian  changelog  copyright  fulldeps.control  mindeps.control
Chicken/trunk/doc/: Makefile.am
Chicken/trunk/doc/en/: Chicken.Configuration.xml
Chicken/trunk/examples/: Makefile.am
Chicken/trunk/src/: Chicken.dll.config.in
Chicken/trunk/src/Gnome/: Makefile.am
FL/: ChangeLog  Makefile.am  autogen.sh  configure.in
FL/src/: FLFramework.dll.config.in  Makefile.am  fl-framework.pc.in  makesources.sh  sources.list
FL/src/Configuration/: ObjectStore.cs
FL/src/Gnome/TrayIcon/: Makefile.am  ObjectManager.cs  TrayIcon.cs
FastOpen/FastOpen-0.2/src/: Makefile.am
FastOpen/Trunk/: Makefile.am  NEWS  README  README.en  TODO  autogen.sh  configure.in  fastopen.in
FastOpen/Trunk/src/: AppContext.cs  CompletionEntry.cs  FastOpenWindow.cs  IEntryParser.cs  Makefile.am  SimpleEntryParser.cs  main.cs
FastOpenTmp/FastOpen-1.0/src/: Makefile.am
FolderMonitor/src/FolderMonitor/: FolderMonitor.cs  FolderMonitor.exe.config.in  Makefile.am  foldermonitor.in
MonkeyPop/: AUTHORS  Makefile.am  NEWS  configure.in
MonkeyPop/scripts/: xchat_popup.py
MonkeyPop/src/: Makefile.am  MonkeyPop.cs  SimpleMonkeyPop.cs
Muine/: Makefile  autogen.sh  configure.in  install-backup.sh  install-devel.sh  muine  muine.exe.config
Muine.Sdk/PlayerKits/Gstreamer/: GstPlayer.cs  Makefile  Makefile.am
Muine.Sdk/PlayerKits/Gstreamer/glue/: Makefile
Muine.Sdk/doc/: Makefile.am  muine-sdk.source
Muine.Sdk/doc/arch/: NamespaceOverview.txt
Muine.Sdk/src/: Makefile  Makefile.am  Makefile.in  muine-sdk.pc.in  sources.list
Muine.Sdk/src/Configuration/: Configuration.cs  FileStore.cs
Muine.Sdk/src/Data/: Album.cs  AlbumMetadata.cs  Cover.cs  CoverDatabase.cs  IAlbumComparer.cs  ICoverDb.cs  IMusicDb.cs  ISearchable.cs  ISongComparer.cs  MusicDatabase.cs  Song.cs  SongMetadata.cs
Muine.Sdk/src/Player/: IPlayer.cs
Muine.Sdk/src/Playlist/: IPlaylist.cs  Playlist.cs
Muine.Sdk/src/Services/: SdkServices.cs  ServiceUnavailableException.cs
Muine/App/: About.cs  AddAlbumWindow.cs  CoverImage.cs  FileSelector.cs  NoMusicFoundWindow.cs  PlaylistWindow.cs  ProgressWindow.cs
Muine/Muine/: InfoWindow.cs  Makefile.am  Muine.cs
Muine/Plugins/: Makefile  Makefile.am
Muine/Plugins/Dashboard/: DashboardFrontend.cs  Makefile.am
Muine/Plugins/MonitorPlugin/: Makefile.am  MonitorPlugin.cs
Muine/Plugins/TestPlugin/: Makefile.TestPlugin  Makefile.solution.TestPlugin  TestPlugin.cmbx  TestPlugin.cs  TestPlugin.pidb  TestPlugin.prjx  make.sh
Muine/Sdk/: Makefile.am  sources.list
Muine/Sdk/Action/: ActionBus.cs
Muine/Sdk/Event/: DatabaseEvent.cs
Muine/Sdk/Event.Filters/: IBusFilter.cs
Muine/Sdk/Muine/: Album.cs  AppContext.cs  ErrorDialog.cs  Metadata.cs
Muine/Sdk/Plugin/: IPlugin.cs
Muine/docs/: plugins.sxw
Muine/docs/Uml/: uml.gaphor
WebNotes/trunk/: AUTHORS  ChangeLog  NEWS  configure.in
WebNotes/trunk/glade/: gladers.list
WebNotes/trunk/images/: Makefile.am  imagers.list  makeimages.sh
idb-sharp/: Makefile.am  configure.in
idb-sharp/src/: IPod.cs  ITunesDB.cs  ITunesDBContentItem.cs  ITunesDBListHolder.cs  ITunesDBParser.cs  ITunesDBPlaylistHeader.cs  ITunesDBPlaylistIndexItem.cs  ITunesDBPlaylistItem.cs  ITunesDBSongItem.cs  ITunesDBSonglistHeader.cs  Makefile.am
monkeypop/trunk/: ChangeLog  Makefile.am  NEWS  configure.in
monkeypop/trunk/debian/: changelog  rules
monkeypop/trunk/images/: Makefile.am
monkeypop/trunk/monkeypopd/: Client.cs  DaemonLauncher.cs  Makefile.am  NotificationDaemon.cs  monkeypop-sample-client.py
monkeypop/trunk/src/: Makefile.am  SimpleMonkeyPop.cs  monkeypop.in
muine/src/Muine/: .svnignore  AddMusicWindow.cs  AddSongWindow.cs  AlbumsStore.cs  AlbumsView.cs  DataStore.cs  DataView.cs  GlobalActions.cs  Makefile.am  Muine.cs  Player.cs  PlayerView.cs  PlaylistStore.cs  PlaylistView.cs  PlaylistWindow.cs  SongsStore.cs  SongsView.cs  sources.list
mvim/trunk/src/: AssemblyInfo.cs.in  Launcher.cs  Makefile.am  MonoVim.exe.config  monovim
(+814 files in other folders)
