AC_INIT(Muine/Muine.cs)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(muine, 0.6.3.99)
AM_MAINTAINER_MODE

dnl Version dependencies

MONO_REQUIRED=0.95
GTKSHARP_REQUIRED=0.93

dnl Audio backend stuff

dnl Pkgconfig

PKG_CHECK_MODULES(MONO,
		  mono >= $MONO_REQUIRED)

PKG_CHECK_MODULES(GTKSHARP,
		  gtk-sharp >= $GTKSHARP_REQUIRED \
		  gnome-sharp >= $GTKSHARP_REQUIRED \
		  glade-sharp >= $GTKSHARP_REQUIRED \
		  gconf-sharp >= $GTKSHARP_REQUIRED)


dnl Check for Mono
AC_PATH_PROG(MCS, mcs)
AC_PATH_PROG(MONO, mono)

MCS_FLAGS=
MONO_FLAGS=
if test $USE_MAINTAINER_MODE = yes; then
	MCS_FLAGS="-g"
	MONO_FLAGS="--debug"
fi
AC_SUBST(MCS_FLAGS)
AC_SUBST(MONO_FLAGS)

AC_OUTPUT([
Makefile
Sdk/Makefile
Sdk/Muine.Sdk.dll.config
Sdk/muine-sdk.pc
Muine/Makefile
Muine/muine
Muine/muine.exe.config
])
