AC_INIT(src/IPod.cs)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(idb-sharp, 0.1)
AM_MAINTAINER_MODE

dnl Version dependencies

MONO_REQUIRED=1.0

dnl Pkgconfig

PKG_CHECK_MODULES(MONO,
		  mono >= $MONO_REQUIRED)

dnl Check for Mono
AC_PATH_PROG(MCS, mcs)
AC_PATH_PROG(MONO, mono)

MCS_FLAGS=
MONO_FLAGS=
if test $USE_MAINTAINER_MODE = yes; then
	MCS_FLAGS="-g"
	MONO_FLAGS="--debug"
fi
AC_SUBST(MCS_FLAGS)
AC_SUBST(MONO_FLAGS)

AC_OUTPUT([
Makefile
src/Makefile
])
