AC_PREREQ(2.59)
AC_INIT(Chicken, 0.1.4, [sergio.rubio@hispalinux.es])
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE
dnl AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE()

# Checks for programs.
AC_PROG_INSTALL
#AC_PROG_CC
#AM_PROG_CC_STDC
AC_PROG_INSTALL
AM_PROG_LIBTOOL

# Checks for libraries.

dnl Version dependencies
MONO_REQUIRED=1.0
GTKSHARP_REQUIRED=1.0
GECKOSHARP_REQUIRED=0.5
GDK20_MINIMUM_VERSION=2.2.3
ATK_MINIMUM_VERSION=1.2.4

dnl ###############
dnl Enabled Modules
dnl ###############
AC_ARG_ENABLE(gnome, [  --enable-gnome=[no/yes]	    compile with gnome support.],,enable_gnome=yes)
AM_CONDITIONAL(ENABLE_GNOME, test "x$enable_gnome" = "xyes")




dnl ####################
dnl Configure PKG_CONFIG
dnl ####################
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
    AC_MSG_ERROR([You need to install pkg-config])
fi


dnl ###################
dnl Pkgconfig
dnl ###################
PKG_CHECK_MODULES(MONO,
		  mono >= $MONO_REQUIRED)
MCS_FLAGS=
MONO_FLAGS=
if test $USE_MAINTAINER_MODE = yes; then
	MCS_FLAGS="-g"
	MONO_FLAGS="--debug"
fi
AC_SUBST(MCS_FLAGS)
AC_SUBST(MONO_FLAGS)

dnl Check for Mono
AC_PATH_PROG(MCS, mcs)
AC_PATH_PROG(MONO, mono)

if test "x$enable_gnome" = "xyes"; then

    PKG_CHECK_MODULES(GTKSHARP,
		      gtk-sharp >= $GTKSHARP_REQUIRED \
		      gnome-sharp >= $GTKSHARP_REQUIRED \
		      glade-sharp >= $GTKSHARP_REQUIRED \
		      gtkhtml-sharp >= $GTKSHARP_REQUIRED \
		      rsvg-sharp >= $GTKSHARP_REQUIRED \
		      gconf-sharp >= $GTKSHARP_REQUIRED)

    AC_SUBST(GTKSHARP_LIBS)
    
    PKG_CHECK_MODULES(GECKOSHARP,
		      gecko-sharp >= $GECKOSHARP_REQUIRED)
    AC_SUBST(GECKOSHARP_LIBS)

    PKG_CHECK_MODULES(LIBTRAYICON,
			gdk-2.0 >= $GDK20_MINIMUM_VERSION
			atk >= $ATK_MINIMUM_VERSION)
    AC_SUBST(LIBTRAYICON_CFLAGS)
    AC_SUBST(LIBTRAYICON_LIBS)
fi



AC_OUTPUT([
Makefile
images/Makefile
doc/Makefile
examples/Makefile
src/Makefile
src/Chicken.dll.config
src/chicken.pc
src/Gnome/Makefile
src/Gnome/TrayIcon/Makefile
src/Gnome/TrayIcon/libtrayicon/Makefile
])
