ASSEMBLIES = /r:../Sdk/Muine.Sdk.dll
SUBDIRS = MonitorPlugin

#all: DashboardFrontend.dll TestPlugin.dll
#
#DashboardFrontend.dll: Dashboard/*.cs
#	mcs /target:library -o DashboardFrontend.dll $(ASSEMBLIES) Dashboard/*.cs
#
#TestPlugin.dll: TestPlugin/*.cs
#	mcs /target:library TestPlugin/*.cs -o TestPlugin.dll $(ASSEMBLIES)
#
#
#install:
#	@if ! test -d ~/.gnome2/muine/plugins; then 	\
#		mkdir -p ~/.gnome2/muine/plugins;	\
#	fi
#	cp *.dll ~/.gnome2/muine/plugins		
#
#clean:
#	@if ! test -z `ls *.dll`; then 	\
#		rm *.dll;		\
#	fi

