AC_PREREQ(2.59)
AC_INIT(WebNotes, 1.0.2, [sergio.rubio@hispalinux.es])
AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE()

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL
AM_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h netinet/in.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([asprintf inet_ntoa memset mkdir putenv select socket strdup strncasecmp])


dnl Version dependencies
MONO_REQUIRED=1.0
GTKSHARP_REQUIRED=1.0
GECKOSHARP_REQUIRED=0.5
GDK20_MINIMUM_VERSION=2.2.3
ATK_MINIMUM_VERSION=1.2.4

#
# Configure PKG_CONFIG
#
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
    AC_MSG_ERROR([You need to install pkg-config])
fi


dnl Pkgconfig
PKG_CHECK_MODULES(MONO,
		  mono >= $MONO_REQUIRED)
MCS_FLAGS=
MONO_FLAGS=
if test $USE_MAINTAINER_MODE = yes; then
	MCS_FLAGS="-g"
	MONO_FLAGS="--debug"
fi
AC_SUBST(MCS_FLAGS)
AC_SUBST(MONO_FLAGS)

PKG_CHECK_MODULES(GECKOSHARP,
		  gecko-sharp >= $GECKOSHARP_REQUIRED)

PKG_CHECK_MODULES(GTKSHARP,
		  gtk-sharp >= $GTKSHARP_REQUIRED \
		  gnome-sharp >= $GTKSHARP_REQUIRED \
		  glade-sharp >= $GTKSHARP_REQUIRED \
		  gconf-sharp >= $GTKSHARP_REQUIRED)

AC_SUBST(GTKSHARP_LIBS)

PKG_CHECK_MODULES(GDK20, gdk-2.0 >= $GDK20_MINIMUM_VERSION)
AC_SUBST(GDK20_CFLAGS)
AC_SUBST(GDK20_LIBS)

PKG_CHECK_MODULES(ATK, atk >= $ATK_MINIMUM_VERSION)
AC_SUBST(ATK_CFLAGS)
AC_SUBST(ATK_LIBS)

dnl Check for Mono
AC_PATH_PROG(MCS, mcs)
AC_PATH_PROG(MONO, mono)


AC_OUTPUT([
Makefile
src/Makefile
src/didiwiki/Makefile
src/didiwiki/src/Makefile
src/WebNotes/Makefile
src/WebNotes/webnotes
src/TrayIcon/Makefile
src/TrayIcon/libtrayicon/Makefile
images/Makefile
glade/Makefile
])
